client/src/assets/images.css
.carcassonne-castle-img {
  background-image: url('/images/carcassonne_castle_background.webp');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50%;
}

body, html {
  max-width: 100vw;
  margin: 0 auto;
  overflow-x: hidden;
}

